--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chartist": "0.11.4",
     "googleapis": "66.0.0",
     "jquery": "3.5.1",
+    "ngx-toastr": "^14.3.0",
     "perfect-scrollbar": "1.5.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
